:alembic: paper texture background

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("./img/DD Old Paper Texture 77722.svg");
+  background-size: cover;
 }
 
 code {
