--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  margin: 0;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
@@ -17,8 +17,21 @@ code {
     monospace;
 }
 
-.book {
-  height: 100vh;
+#root {
+  height: 100%
+}
+
+.App{
+  height: 100%;
+}
+
+.book{
+  height: 100%;
+  
+}
+
+.title{
+  text-align: center;
 }
 
 @import "../node_modules/bulma/bulma.sass"
